# solana-service-scaffold

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: audit.toml  config.toml
.config/opencode/: AGENTS.md
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml
config/: default.toml
crates/application/: Cargo.toml
crates/domain/: Cargo.toml
crates/domain/src/: address.rs  dto.rs  entities.rs  error.rs  lamports.rs  lib.rs  models.rs  provider.rs  signature.rs
crates/domain/src/entities/: address.rs  dto.rs  lamports.rs  signature.rs
crates/infrastructure/: Cargo.toml
src/: configuration.rs  main.rs
