[package]
name = "solana-service-scaffold"
version = "0.1.95"
edition = "2024"

[lints]
workspace = true

[workspace]
members = ["crates/domain", "crates/application", "crates/infrastructure"]

resolver = "2"

[workspace.dependencies]
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
anyhow = "1"

domain = { path = "crates/domain" }
application = { path = "crates/application" }
infrastructure = { path = "crates/infrastructure" }


[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = 0 }
nursery = { level = "warn", priority = 0 }
unwrap_used = { level = "deny", priority = 1 }
expect_used = { level = "deny", priority = 1 }
panic = { level = "deny", priority = 1 }
