[package]
name = "infrastructure"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
domain.workspace = true
application.workspace = true

url = { version = "2.5", features = ["serde"] }
reqwest = { version = "0.13", features = ["json"] }
futures = "0.3"
sqlx = { version = "0.9", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "macros",
    "migrate",
    "uuid",
    "chrono",
] }
axum = { version = "0.8", features = ["macros"] }
prometheus = "0.14"
async-trait = "0.1"

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
